fixed news text-overflow with img{width:100%}

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -261,6 +261,7 @@ hr.star-light:after {
   div{
     margin-bottom:40px;
   }
+  img{width:100%;}
 }
 
 .news-container{
